--- a/css-exercise-one/css/style.css
+++ b/css-exercise-one/css/style.css
@@ -1,30 +1,34 @@
-body
+body {
   font-size: 14px;
 }
 
+/* top header */
 nav {
   background color: yellow;
   height: 100px;
   margin-top: -10px;
   position: fixed;
   width: 100%;
-
+}
 
 section {
   margin: 0 auto;
   width: 60%;
 }
 
+/* top header weight */
 h1 {
-  font-family sans-serif;
+  font-family: sans-serif;
   font-size: 2em;
 }
 
+/*** not sure what .example refers to ***/
 .example, h3 {
   padding-top: 30px;
-  text-align center
+  text-align: center;
 }
 
+/* div weights */
 h3 {
   font-size: 1.3em;
 }
@@ -32,5 +36,14 @@ h3 {
 .element {
   background-color: green;
   height: 100px;
-  margin 10px 0;
+  margin: 10px 0;
   width: 100%;
+}
+
+/* change for last three div elements to yellow */
+.element2 {
+  background-color: yellow;
+  height: 100px;
+  margin: 10px 0;
+  width: 100%;
+}
