--- a/css-exercise-four/css/style.css
+++ b/css-exercise-four/css/style.css
@@ -6,15 +6,10 @@
 
 body {
   background-color: #dadada;
-  font-size: 10px;
+  font-size: 20px;
 }
 
-#container {
-  width: auto;
-  margin: 0 auto;
-}
-
-#container h1 {
+.container > h1 {
   font-size: 14px;
   font-family: Open Sans;
   letter-spacing: 4px;
@@ -28,29 +23,27 @@ div {
   padding-bottom: 20px;
 }
 
-/** not sure how to center the image inside crop **/
-img {
-  width: 125%;
+div > h1 {
+  font-family: serif;
+  text-transform: capitalize;
+  margin: 60px 0px 0px 60px;
+  position: absolute;
 }
 
-#previews h1 {
-  font-size: 20px;
-  font-family: serif;
-  float: left;
-  letter-spacing: normal;
-  position: absolute;
-  text-transform: capitalize;
+img {
+  width: 125%;
+  height: auto;
 }
 
 /* code added to create two-column design (TABLET) */
 
 @media screen and (min-width: 575px)
 {
-   div {
-    width: 48%;
+  div {
+    width: 38%;
+    border: 5px solid #000000;
   }
-
-  #previews {
+  section {
     float: left;
   }
 }
