--- a/css-exercise-four/css/style.css
+++ b/css-exercise-four/css/style.css
@@ -13,24 +13,28 @@ body {
   background-image: url(../images/baku.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center top;
 }
 
 .preview_london {
   background-image: url(../images/london.png);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center top;
 }
 
 .preview_madrid {
   background-image: url(../images/madrid.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center top;
 }
 
 .preview_rome {
   background-image: url(../images/rome.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center top;
 }
 
 .container > h1 {
@@ -44,14 +48,14 @@ body {
 
 div {
   width: 100%;
-  height: 375px;
-  margin-bottom: 20px;
+  height: 300px;
+  margin: 0px 0px 20px 0px;
 }
 
 div > h1 {
   font-family: serif;
   text-transform: capitalize;
-  margin: 60px 0px 0px 60px;
+  margin: 40px 0px 0px 40px;
   position: absolute;
 }
 
@@ -61,20 +65,15 @@ div > h1 {
 {
   div {
     float: left;
-    margin: 0px;
-    width: 50%;
-    height: 300px;
-    border: 10px solid #dadada;
+    margin: 0px 0px 20px 20px;
+    width: 46%;
+    height: 200px;
   }
 
   section:after {
     content: "";
     display: table;
     clear: both;
-  }
-
-  section {
-    padding: 0px 100px;
   }
 }
 
@@ -84,19 +83,14 @@ div > h1 {
 {
     div {
       float: left;
-      margin: 0px;
-      width: 25%;
+      margin: 0px 0px 20px 50px;
+      width: 22%;
       height: 300px;
-      border: 10px solid #dadada;
     }
 
     section:after {
       content: "";
       display: table;
       clear: both;
-    }
-
-    section {
-      padding: 0px 100px;
     }
 }
