--- a/css-exercise-four/css/style.css
+++ b/css-exercise-four/css/style.css
@@ -68,6 +68,7 @@ div > h1 {
     margin: 0px 5px 10px 5px;
     width: 40%;
     height: 200px;
+    border: 5px solid #000000;
   }
 
   div > h1 {
