--- a/front-end-challenge/css/style.css
+++ b/front-end-challenge/css/style.css
@@ -11,32 +11,6 @@ body {
   line-height: 1.5em;
 }
 
-.content h1 {
-	font-size: 18px;
-	font-weight: bold;
-	text-transform: uppercase;
-	text-align: center;
-}
-
-.column h5 {
-	font-size: 12px;
-	font-style: italic;
-	margin-bottom: 10px;
-}
-
-.eastbound h1,.northbound h1 {
-	border-top: 2px solid;
-	border-bottom: 2px solid;
-	border-color: rgba(255, 77, 25, 0.5);
-	padding: 20px 0px;
-}
-
-.lines {
-	width: 60%;
-	height: auto;
-	border: 5px solid #000000;
-}
-
 nav {
 	background-image: url(../images/status-bar.png);
 	background-repeat: no-repeat;
@@ -47,6 +21,37 @@ nav {
 
 .arrow-left {
 	color: #FF7630;
+	margin-top: 15%;
+}
+
+.content h1 {
+	font-size: 18px;
+	font-weight: bold;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.column h5 {
+	font-size: 12px;
+	margin-bottom: 10px;
+}
+
+/** dividers **/
+.eastbound h1,.northbound h1 {
+	border-top: 2px solid;
+	border-bottom: 2px solid;
+	border-color: rgba(255, 77, 25, 0.25);
+	padding: 20px 0px;
+}
+
+.eastbound h1 {
+	margin-top: -14%
+}
+
+.column.lines {
+	font-weight: bold;
+	width: 40px;
+	border: 5px solid #000000;
 }
 
 .column {
