--- a/front-end-challenge/css/style.css
+++ b/front-end-challenge/css/style.css
@@ -6,9 +6,8 @@
 
 body {
   background-color: white;
-  font-family: Futura,Trebuchet MS,Arial,sans-serif;
-  font-size: 10px;
-  line-height: 1.5em;
+  font-family: Gill Sans, sans-serif;
+  line-height: 1.1em;
 }
 
 nav {
@@ -21,46 +20,41 @@ nav {
 
 .arrow-left {
 	color: #FF7630;
-	margin-top: 15%;
+	margin-top: 18%;
+	margin-left: 5%
+}
+
+.eastbound h1 {
+	margin-top: -17%;
 }
 
 .content h1 {
 	font-size: 18px;
-	font-weight: bold;
+	font-weight: 700;
 	text-transform: uppercase;
 	text-align: center;
 }
 
-.column h5 {
-	font-size: 12px;
-	margin-bottom: 10px;
-}
-
 /** dividers **/
-.eastbound h1,.northbound h1 {
+.eastbound h1,.northbound h1,.southbound h1, .reroute h1, .out-of-service h1 {
 	border-top: 2px solid;
 	border-bottom: 2px solid;
 	border-color: rgba(255, 77, 25, 0.25);
-	padding: 20px 0px;
+	padding: 30px 0px;
 }
 
-.eastbound h1 {
-	margin-top: -14%
-}
-
-.column.lines {
-	font-weight: bold;
-	width: 40px;
-	border: 5px solid #000000;
-}
-
-.column {
-	border: 1px solid #000000;
+li div {
 	display: inline-block;
-	height: auto;
-	padding: 10px;
+	margin: 0px 15px;
 	text-align: left;
-	width: 38%;
+}
+
+ul {
+	margin: 30px 0px;
+}
+
+.bus-number {
+	font-weight: 700;
 }
 
 section .bus-routes {
