--- a/front-end-challenge/css/style.css
+++ b/front-end-challenge/css/style.css
@@ -6,8 +6,8 @@
 
 body {
   background-color: white;
-  font-family: Gill Sans, sans-serif;
-  line-height: 1.1em;
+	font-size: 15px;
+  font-family: Futura, sans-serif;
 }
 
 nav {
@@ -20,16 +20,13 @@ nav {
 
 .arrow-left {
 	color: #FF7630;
-	margin-top: 18%;
-	margin-left: 5%
 }
 
 .eastbound h1 {
-	margin-top: -17%;
 }
 
 .content h1 {
-	font-size: 18px;
+	font-size: 22px;
 	font-weight: 700;
 	text-transform: uppercase;
 	text-align: center;
@@ -40,23 +37,37 @@ nav {
 	border-top: 2px solid;
 	border-bottom: 2px solid;
 	border-color: rgba(255, 77, 25, 0.25);
-	padding: 30px 0px;
 }
 
 li div {
 	display: inline-block;
-	margin: 0px 15px;
 	text-align: left;
 }
 
 ul {
-	margin: 30px 0px;
+	text-align: center;
+}
+
+div .number {
+	background-image: linear-gradient(#FF3B30, #FF9500);
+	border-radius: 5px;
+	width: 45px;
+	height: 45px;
 }
 
 .bus-number {
 	font-weight: 700;
+	color: white;
+	width: 20%;
+	text-align: center;
+	border: 1px solid #000000;
 }
 
-section .bus-routes {
-	text-align: center;
+.bus-destination {
+	width: 35%;
+	border: 1px solid #000000;
+}
+.bus-frequency {
+	width: 30%;
+	border: 1px solid #000000;
 }
