--- a/front-end-challenge/css/style.css
+++ b/front-end-challenge/css/style.css
@@ -40,6 +40,7 @@ nav {
   font-size: 22px;
 	font-weight: 700;
   padding-top: 25px;
+  padding-bottom: 10px;
 	text-transform: uppercase;
 	text-align: center;
 }
@@ -50,28 +51,44 @@ nav {
   color: white;
   font-weight: 700;
   width: 42px;
-  height: 42px
+  height: 42px;
 }
 
 .bus-destination {
   text-align: left;
-  padding-left: 10px;
-  width: 46%;
+  padding-left: 15px;
+  width: 50%;
   height: 42px;
-  vertical-align: middle;
 }
 
 .bus-frequency {
   text-align: left;
-  width: 35%;
+  width: 21%;
+}
+
+li.arriving {
+  background: #FF3B30;
+  color: white;
+  vertical-align: middle;
+}
+
+li.arriving .bus-number {
+    border: 2px solid #ffffff;
+    margin-left: -11px;
+}
+
+li.arriving h3 {
+  font-family: Open Sans Condensed, sans-serif;
+  text-transform: uppercase;
 }
 
 li {
-  margin: 20px 0px;
+  padding: 15px 0px;
   text-align: center;
 }
 
 li div {
   display: inline-block;
+  vertical-align: middle;
   padding: 10px 5px 10px 5px;
 }
